project-1/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.sre.turtle-infra.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes
          servicePort: 80
